Replaced a blurry image and fixed the partial content bug

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,12 +17,15 @@
   border-bottom: 1px solid rgba(187, 187, 187, 0.6);
 }
 
-.iconImg {
-  border-radius: 8px 0 0 8px;
-  width: 64px;
-  height: 64px;
+.iconContainer {
+  height: 48px;
+  padding: 8px;
   cursor: pointer;
   display: inline-block;
+}
+
+.iconImg {
+  height: inherit;
 }
 
 .visibleFadeIn {
